--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "census-api",
-  "version": "0.0.0-beta.0.0",
-  "private": false,
-  "scripts": {
-    "build": "tsc",
-    "postinstall": "postinstall-build dist"
-  },
-  "main": "src/index.ts",
-  "dependencies": {
-    "es6-error": "^4.1.1"
-  },
-  "devDependencies": {}
+  	"name": "census-api",
+	"version": "0.0.0-beta.0.0",
+  	"private": false,
+ 	"main": "dist/index.js",
+ 	 "scripts": {
+ 	   "build": "tsc -p tsconfig.json",
+  	  "postinstall": "postinstall-build dist"
+	},
+ 	 "dependencies": {
+  	 	"postinstall-build": "^3.0.0"
+  	},
+  	"devDependencies": {
+  	 	"es6-error": "^4.1.1"
+    }
 }
