--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"scope": "@weakenedplayer",
   	"name": "@weakenedplayer/census-api",
-	"version": "0.0.0-beta.1",
+	"version": "0.0.0-beta.2",
 	"description": "DBG Census API: REST & Event Stream",
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
  	"main": "dist/index.js",
  	 "scripts": {
- 	   "build": "tsc -p ./tsconfig.json",
+ 	   "build": "tsc",
   	  "postinstall": "postinstall-build dist"
 	},
  	 "dependencies": {
