--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
 	"scope": "@weakenedplayer",
   	"name": "@weakenedplayer/census-api",
-	"version": "0.0.0-beta.8",
+	"version": "0.0.0",
 	"description": "DBG Census API: REST & Event Stream",
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
  	"main": "dist/index.js",
+    "types": "dist/index.d.ts",
  	 "scripts": {
  	 	"build": "tsc -p tsconfig.json",
-  	  	"postinstall": "postinstall-build dist"
+  	  	"postinstall": "postinstall-build dist",
+  	  	"beta-release": "npm publish --tag beta --access public",
+  	  	"release": "npm publish --tag latest --access public"
 	},
  	 "dependencies": {
+  	 	"es6-error": "^4.1.1",
   	 	"postinstall-build": "^3.0.0"
   	},
   	"devDependencies": {
-  	 	"es6-error": "^4.1.1"
     },
     "buildDependencies": {
 		"typescript": "*"
