--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
- "scope": "@weakenedplayer",
- "name": "@weakenedplayer/census-api",
- "version": "0.0.1-beta.3",
- "description": "DBG Census API: REST & Event Stream",
- "repository": "https://github.com/WeakenedPlayer/census-api",
- "license": "MIT",
- "main": "dist/index.js",
- "types": "dist/index.d.ts",
- "scripts": {
-  "build": "tsc -p tsconfig.json",
-  "postinstall": "postinstall-build dist",
-  "beta-release": "npm publish --tag beta --access public",
-  "release": "npm publish --tag latest --access public"
- },
- "dependencies": {
-  "es6-error": "^4.1.1",
-  "postinstall-build": "^3.0.0",
-  "rxjs": "^5.5.6"
- },
- "devDependencies": {},
- "buildDependencies": {
-  "typescript": "*"
- }
+	"scope": "@weakenedplayer",
+	"name": "@weakenedplayer/census-api",
+	"version": "0.0.1-beta.4",
+	"description": "DBG Census API: REST & Event Stream",
+	"repository": "https://github.com/WeakenedPlayer/census-api",
+	"license": "MIT",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"scripts": {
+		"build": "tsc -p tsconfig.json",
+		"test": "tsc -p tsconfig.test.json && node dist-test/index.js",
+		"postinstall": "postinstall-build dist",
+		"beta-release": "npm publish --tag beta --access public",
+		"release": "npm publish --tag latest --access public"
+	},
+	"dependencies": {
+		"es6-error": "^4.1.1",
+		"postinstall-build": "^3.0.0",
+		"rxjs": "^5.5.6"
+	},
+	"devDependencies": {},
+	"buildDependencies": {
+		"typescript": "*"
+	}
 }
