--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scope": "@weakenedplayer",
 	"name": "@weakenedplayer/census-api",
-	"version": "0.0.1-beta.7",
+	"version": "0.0.1-beta.8",
 	"description": "DBG Census API: REST & Event Stream",
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
@@ -17,10 +17,13 @@
 	"dependencies": {
 		"es6-error": "^4.1.1",
 		"postinstall-build": "^3.0.0",
-		"rxjs": "^5.5.6"
+		"request": "^2.85.0",
+		"rxjs": "^5.5.6",
+		"string-format": "^1.0.0"
 	},
 	"devDependencies": {},
 	"buildDependencies": {
-		"typescript": "*"
+		"typescript": "*",
+		"request": "*"
 	}
 }
