--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scope": "@weakenedplayer",
 	"name": "@weakenedplayer/census-api",
-	"version": "0.0.1-beta.8",
+	"version": "0.0.2",
 	"description": "DBG Census API: REST & Event Stream",
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
