--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"scope": "@weakenedplayer",
 	"name": "@weakenedplayer/census-api",
-	"version": "0.0.3-beta.0",
-	"description": "DBG Census API: REST & Event Stream",
+	"version": "0.0.3-beta.1",
+	"description": "DBG Census API: REST & Event Stream for browser&node.js",
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
 	"main": "dist/index.js",
