--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"scope": "@weakenedplayer",
 	"name": "@weakenedplayer/census-api",
-	"version": "0.0.3-beta.1",
+	"version": "0.0.3-beta.2",
 	"description": "DBG Census API: REST & Event Stream for browser&node.js",
+	"keywords": [ "Census API", "Daybreak", "REST", "Event Stream" ],
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
 	"main": "dist/index.js",
