--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
 	"scope": "@weakenedplayer",
 	"name": "@weakenedplayer/census-api",
-	"version": "0.0.4",
+	"version": "0.1.1",
 	"description": "DBG Census API: REST & Event Stream for browser&node.js",
-	"keywords": [ "Census API", "Daybreak", "REST", "Event Stream" ],
+	"keywords": [
+		"Census API",
+		"Daybreak",
+		"REST",
+		"Event Stream"
+	],
 	"repository": "https://github.com/WeakenedPlayer/census-api",
 	"license": "MIT",
 	"main": "dist/index.js",
@@ -19,7 +24,7 @@
 		"es6-error": "^4.1.1",
 		"postinstall-build": "^3.0.0",
 		"request": "^2.85.0",
-		"rxjs": "^6.0.0",
+		"rxjs": "^6.1.0",
 		"string-format": "^1.0.0"
 	},
 	"devDependencies": {},
